it works method to save business final sales